--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -69,6 +69,7 @@
                     {{ user_form|crispy }}
                     {{ form| crispy }}
                     <button class="btn btn-blue">Update Information</button>
+                    <a href="{% url 'profile' %}" aria-label="Cancel profile information update" class="btn btn-grey">Cancel</a>
                 </form>
             </section>
             <!-- User order history -->
