--- a/reviews/templates/reviews/edit_review.html
+++ b/reviews/templates/reviews/edit_review.html
@@ -4,9 +4,7 @@
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col">
-
-        </div>
+        <div class="col"></div>
     </div>
 </div>
 {% endblock %}
@@ -16,17 +14,17 @@
     <div class="row">
         <div class="col-12">
             <h2 class="text-center">Update a Product Review</h2>
-
         </div>
     </div>
     <div class="row mt-3">
+        <!-- Edit product review form -->
         <div class="col-12 col-md-6 offset-md-3">
             <form action="{% url 'edit_product_review' review.id %}" method="POST" class="form">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Update</button>
-                    <a href="{% url 'product_detail' product.id %}">
+                    <a href="{% url 'product_detail' product.id %}" aria-label="Link to product detail page">
                         <button class="btn btn-grey" type="button">Cancel</button>
                     </a>
                 </div>
@@ -34,6 +32,4 @@
         </div>
     </div>
 </div>
-
-
 {% endblock %}
