--- a/templates/includes/toasts/toast-success.html
+++ b/templates/includes/toasts/toast-success.html
@@ -44,7 +44,7 @@
             {% if free_delivery_delta > 0%}
               <p>Get free delivery if you spend <strong>£{{ free_delivery_delta }}</strong> more!</p>
             {% endif %}
-            <a href="{% url 'view_basket' %}" id="toast-button" class="btn btn-blue">
+            <a href="{% url 'view_basket' %}" id="toast-button" class="btn btn-sm btn-blue">
               <span>Go to Shopping Basket</span>
             </a>
           </div>
